--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -1,8 +1,8 @@
-```{r 05-setup, include=FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE)
-```
-
 # Classification I: training & predicting {#classification}
+
+```{r 05-setup, include=FALSE}
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
+```
 
 ## Overview 
 Up until this point, we have focused solely on descriptive and exploratory
@@ -151,7 +151,7 @@ We can see from the summary of the data above that `Class` is of type character
 categorical statistical variable, we will convert it to factor using the
 function `as_factor`.
 
-```{r 05-class, echo = TRUE}
+```{r 05-class}
 cancer <- cancer %>%
   mutate(Class = as_factor(Class))
 glimpse(cancer)
@@ -166,7 +166,7 @@ a *vector* argument, while the `select` function outputs a *data frame*;
 so we use the `pull` function, which converts a single
 column of a data frame into a vector.
 
-```{r 05-levels, echo = TRUE}
+```{r 05-levels}
 cancer %>%
   select(Class) %>%
   pull() %>% # turns a data frame into a vector
@@ -351,14 +351,6 @@ perim_concav + geom_point(aes(x = new_point[1], y = new_point[2]),
   ), color = "black")
 ```
 </center>
-
-
-
-```{r 05-knn-6, echo = FALSE}
-# neighbours %>%
-#  select(ID, attrs, Class) %>%
-#  slice(1:3)
-```
 
 Here we chose the $K=3$ nearest observations, but there is nothing special
 about $K=3$. We could have used $K=4, 5$ or more (though we may want to choose
