explained head() in ch 2, removed it from ch 3, replaced mtcars with region_lang, removed library and replaced with package

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -31,11 +31,11 @@ By the end of the chapter, students will be able to:
     - `col_names`
     - `skip`
 - choose the appropriate `tidyverse` `read_*` function and function arguments to load a given plain text tabular data set into R
-- use `readxl` library's `read_excel` function and arguments to load a sheet from an excel file into R
-- connect to a database using the `DBI` library's `dbConnect` function
-- list the tables in a database using the `DBI` library's `dbListTables` function
-- create a reference to a database table that is queriable using the `tbl` from the `dbplyr` library
-- retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` library
+- use `readxl` package's `read_excel` function and arguments to load a sheet from an excel file into R
+- connect to a database using the `DBI` package's `dbConnect` function
+- list the tables in a database using the `DBI` package's `dbListTables` function
+- create a reference to a database table that is queriable using the `tbl` from the `dbplyr` package
+- retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package
 - use `write_csv` to save a data frame to a `.csv` file
 
 - (*optional*) scrape data from the web
@@ -116,7 +116,7 @@ head -n 10 data/can_lang.csv
 ```
 
 And here is a review of how we can use `read_csv` to load it into R. First we 
-load the `tidyverse` library to gain access to useful functions for reading the 
+load the `tidyverse` package to gain access to useful functions for reading the 
 data. 
 
 ```{r, message = TRUE}
@@ -124,14 +124,14 @@ library(tidyverse)
 ```
 
 > Note: it is normal and expected that a message is printed out after 
-loading the `tidyverse` and some libraries. Generally, this message let's you
-know if functions from the different libraries were loaded share the same name
+loading the `tidyverse` and some packages. Generally, this message let's you
+know if functions from the different packages were loaded share the same name
 (which is confusing to R), and if so, which one you can access using just it's
-name (and which one you need to refer the library name and the function name to
+name (and which one you need to refer the package name and the function name to
 refer to it, this is called masking). Additionally, the `tidyverse` is a special
-R library - it is a meta-library or meta-package that bundles together several
-related and commonly used packages. Because of this it lists the libraries it 
-does the job of loading. In future when we load this library in this book we 
+R package - it is a meta-package that bundles together several
+related and commonly used packages. Because of this it lists the packages it 
+does the job of loading. In future when we load this package in this book we 
 will silence these messages to help with readability of the book.
 
 Next we use `read_csv` to load the data into R, and in that call we specify the
@@ -333,7 +333,7 @@ lang_db
 Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database (note the first two lines of the output). 
 It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be 
 stored on your computer, but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell 
-it to do so using the `collect` function from the `dbplyr` library. 
+it to do so using the `collect` function from the `dbplyr` package. 
 
 Here we will filter for only rows in the Aboriginal languages category according to the 2016 Canada Census, and then use `collect` to finally bring this data into R as a data frame. 
 
@@ -382,7 +382,7 @@ function is listed below:
 - `password` - the password for accessing the database
 
 
-Additionally, we must use the `RPostgres` library instead of `RSQLite` in the `dbConnect` function call.
+Additionally, we must use the `RPostgres` package instead of `RSQLite` in the `dbConnect` function call.
 Below we demonstrate how to connect to a version of the `can_mov_db` database, which contains information about Canadian movies (*note - this is a synthetic, or artificial, database*).
 
 ```
@@ -496,7 +496,7 @@ For example, [there are billions of Google searches conducted daily](https://www
 ## Writing data from R to a `.csv` file
 
 At the middle and end of a data analysis, we often want to write a data frame that has changed (either through filtering, selecting, mutating or summarizing) to a file 
-to share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function from the `tidyverse` library. 
+to share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function from the `tidyverse` package. 
 The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the Canadian languages data set without the official languages category according to the Canadian 2016 Census, and then writing this to a `.csv` file:
 
 ```
@@ -617,6 +617,7 @@ page <- read_html("https://en.wikipedia.org/wiki/Canada")
 
 Then we send the page object to the `html_nodes` function. We also provide that function with the CSS selectors we obtained from the selectorgadget tool. These should be surrounded by quotations. The `html_nodes` function select nodes from the HTML document using CSS selectors. Nodes are the HTML tag pairs as well as the content between the tags. For our CSS selector `td:nth-child(5)` and example node that would be selected would be: `<td style="text-align:left;background:#f0f0f0;"><a href="/wiki/London,_Ontario" title="London, Ontario">London</a></td>`
 
+We will use `head()` here to limit the print output of these vectors to 6 lines.
 ```{r 01-select-nodes}
 population_nodes <- html_nodes(page, "td:nth-child(5) , td:nth-child(7) , .infobox:nth-child(122) td:nth-child(1) , .infobox td:nth-child(3)")
 head(population_nodes)
