--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -28,7 +28,7 @@ are external references that contain a wealth of additional information on the t
     - aesthetic mappings
     - geometric objects
     - scales
-- Use the `ggplot2` library in R to create and refine the above visualizations using:
+- Use the `ggplot2` package in R to create and refine the above visualizations using:
     - geometric objects: `geom_point`, `geom_line`, `geom_histogram`, `geom_bar`, `geom_vline`, `geom_hline`
     - scales: `scale_x_continuous`, `scale_y_continuous`
     - aesthetic mappings: `x`, `y`, `fill`, `colour`, `shape`
@@ -85,7 +85,7 @@ making it easier for them to understand and remember your message quickly.
 - Ensure the data are clearly visible; don’t hide the shape/distribution of the data behind other objects (e.g. a bar).
 - Make sure to use colour schemes that are understandable by those with colourblindness (a surprisingly large fraction of the 
   overall population). For example, [colorbrewer.org](https://colorbrewer2.org)
-  and the `RColorBrewer` R library provide the ability to pick such colour schemes, and you can check your visualizations after
+  and the `RColorBrewer` R package provide the ability to pick such colour schemes, and you can check your visualizations after
   you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
 
@@ -101,7 +101,7 @@ making it easier for them to understand and remember your message quickly.
 #### *Build the visualization iteratively*
 
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
-and then how to create the visualization in R using `ggplot2`. To use the `ggplot2` library, we need to load the `tidyverse` metapackage.
+and then how to create the visualization in R using `ggplot2`. To use the `ggplot2` package, we need to load the `tidyverse` metapackage.
 
 ```{r 03-tidyverse,, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -127,7 +127,7 @@ co2_df
 Since we are investigating a relationship between two variables (CO2 concentration and date), a scatter plot is a good place to start. Scatter plots 
 show the data as individual points with `x` (horizontal axis) and `y` (vertical axis) coordinates. Here, we will use the decimal
  date as the `x` coordinate 
-and CO2 concentration as the `y` coordinate. When using the `ggplot2` library, we create the plot object with the `ggplot` function; there are 
+and CO2 concentration as the `y` coordinate. When using the `ggplot2` package, we create the plot object with the `ggplot` function; there are 
 a few basic aspects of a plot that we need to specify:
 
 - the *data*: the name of the data frame object that we would like to visualize 
