--- a/index.Rmd
+++ b/index.Rmd
@@ -73,10 +73,10 @@ By the end of the chapter, students will be able to:
 - use a Jupyter notebook to execute provided R code
 - edit code and markdown cells in a Jupyter notebook
 - create new code and markdown cells in a Jupyter notebook
-- load the `tidyverse` library into R
+- load the `tidyverse` package into R
 - create new variables and objects in R using the assignment symbol
 - use the help and documentation tools in R
-- match the names of the following functions from the `tidyverse` library to their documentation descriptions: 
+- match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
     - `read_csv` 
     - `select`
     - `filter`
@@ -132,8 +132,8 @@ In its most basic use-case, `read_csv` expects that the data file:
 - does not have row names.
 
 Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
-to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *library*. The `read_csv` function in particular
-is in the `tidyverse` library (more on this later), which we load using the `library` function.
+to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function in particular
+is in the `tidyverse` package (more on this later), which we load using the `library` function.
 
 Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we 
 use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file, because our file satifies everthing else 
