done editing clustering and rebuild

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -456,9 +456,10 @@ marketing_clust
 ```
 
 As you can see above, the clustering object returned by `kmeans` has a lot of information
+that can be used to visualize the clusters, pick K, and evaluate the total WSSD.
 To obtain this information in a tidy format, we will call in help 
-from the `broom` package. Let's first start by getting the cluster
-identification for each point and plotting that on the scatter plot. To do that
+from the `broom` package. Let's start by visualizing the clustering
+as a coloured scatter plot. To do that
 we use the `augment` function, which takes in the model and the original data
 frame, and returns a data frame with the data and the cluster assignments for
 each point:
@@ -468,7 +469,8 @@ clustered_data <- augment(marketing_clust, marketing_data)
 clustered_data
 ```
 
-Now that we have this data frame, we can easily plot the data (i.e., cluster assignments of each point):
+Now that we have this information in a tidy data frame, we can make a visualization
+of the cluster assignments for each point:
 
 ```{r 10-plot-clusters-2, fig.height = 4, fig.width = 4.35}
 
