replaced more library with package

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -86,9 +86,9 @@ guide patient treatment.
 
 Our first step is to load, wrangle, and explore the data using visualizations
 in order to better understand the data we are working with.  We start by
-loading the necessary libraries for our analysis. Below you'll see (in addition
-to the usual `tidyverse`) a new library: `forcats`. 
-The `forcats` library enables us to easily
+loading the necessary packages for our analysis. Below you'll see (in addition
+to the usual `tidyverse`) a new package: `forcats`. 
+The `forcats` package enables us to easily
 manipulate factors in R; factors are a special categorical type of variable in
 R that are often used for class label data. 
 
