--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -34,7 +34,7 @@ set from Sacremento, California.
 
 ## Sacremento real estate example
 
-Let's start by loading the libraries we need and doing some preliminary
+Let's start by loading the packages we need and doing some preliminary
 exploratory analysis. The Sacramento real estate data set we will study in this chapter
 was [originally reported in the Sacramento Bee](https://support.spatialkey.com/spatialkey-sample-csv-data/),
 but we have provided it with this repository as a stable source for the data.
