added setup block label to 02 wrang

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -32,7 +32,7 @@ of how we can use and manipulate these objects.
 
 Let's first start by defining what a data frame is exactly. From a data perspective, it is a rectangle where the rows are the observations:
 
-```{r setup, include=FALSE}
+```{r 02-setup, include=FALSE}
 devtools::install_github("ttimbers/canlang")
 library(tidyverse)
 library(canlang)
