editing introduction, removed mention of the course, removed Jupyter material from the intro and learning objectives and moved it to the last chapter

--- a/11-moving-to-your-own-machine.Rmd
+++ b/11-moving-to-your-own-machine.Rmd
@@ -11,9 +11,30 @@ you don't have a preconfigured JupyterHub available to you.
 
 By the end of the chapter, students will be able to:
 
+- use a Jupyter notebook to execute provided R code
+- edit code and markdown cells in a Jupyter notebook
+- create new code and markdown cells in a Jupyter notebook
 - install Git and the miniconda Python distribution
 - install and launch a local instance of JupyterLab with the R kernel
 - download files from a JupyterHub for later local use
+
+
+## Jupyter notebooks
+
+Jupyter notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they are able to combine these two in a single document---code is not separate from the output or written report---notebooks are one of the leading tools to create *reproducible data analyses*. A reproducible data analysis is one where you can reliably and easily recreate the same results when analyzing the same data. Although this sounds like something that should always be true of any data analysis, in reality this is not often the case; one needs to make a conscious effort to perform data analysis in a reproducible manner.
+
+The name Jupyter came from combining the names of the three programming language that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks. 
+
+A notebook looks like this:
+
+```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Jupyter Notebook", fig.retina = 2}
+knitr::include_graphics("img/jupyter.png")
+```
+
+We have included a short demo video here to help you get started and to introduce you to Jupyter. 
+However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it yourself! [Here is a worksheet](https://github.com/UBC-DSCI/dsci-100-assets/blob/master/2019-fall/materials/worksheet_01/worksheet_01.ipynb) that provides a step-by-step guide through the basics.
+
+<iframe width="840" height="473" src="https://www.youtube.com/embed/2yv4pEmFgnw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Installing software on your own computer
 
