--- a/index.Rmd
+++ b/index.Rmd
@@ -40,39 +40,37 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
   readr::write_csv("data/can_lang.csv")
 ```
 
-# R, Jupyter, and the tidyverse
+# R and the tidyverse
+This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. 
 
-This is an open source textbook aimed at introducing undergraduate students to data science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science](https://ubc-dsci.github.io/dsci-100/) course. In this book, we define data science as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. 
+The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help getting started using R on their computer, we recommend starting with [Moving to your own machine].
 
-The book is structured so that learners spend the first four chapters learning how to use the R programming language and Jupyter notebooks to load, wrangle/clean, and visualize data, while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve four common problems in data science, which are useful for answering predictive and inferential data analysis questions:
+Four common problems in data science, which are useful for answering predictive and inferential data analysis questions are:
 
 1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
-2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20 year old females with a BMI of 25).
+2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20-year-old females with a BMI of 25).
 3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
-4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iphone)
+4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iPhone)
 
-For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
+We map each of these problems to the type of data analysis question and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
 **Types of data analysis questions**
 
 | Question type | Description | Example |
 |---------------|-------------|---------|
-| Descriptive | A question which asks about summarized characteristics of a data set without interpretation (i.e., report a fact). | How many people live in each province or territory in Canada? |
+| Descriptive | A question that asks about summarized characteristics of a data set without interpretation (i.e., report a fact). | How many people live in each province or territory in Canada? |
 | Exploratory | A question asks if there are patterns, trends, or relationships within a single data set. Often used to propose hypotheses for future study. | Does political party voting change with indicators of wealth in a set of data collected on 2,000 people living in Canada? |
 | Inferential | A question that looks for patterns, trends, or relationships in a single data set **and** also asks for quantification of how applicable these findings are to the wider population. | Does political party voting change with indicators of wealth for all people living in Canada? |
 | Predictive | A question that asks about predicting measurements or labels for individuals (people or things). The focus is on what things predict some outcome, but not what causes the outcome. | What political party will someone vote for in the next Canadian election? |
 | Causal | A question that asks about whether changing one factor will lead to a change in another factor, on average, in the wider population. | Does wealth lead to voting for a certain political party in Canadian elections? |
-| Mechanistic | A question that asks about the underlying mechanism of the observed patterns, trends, or relationship (i.e., how does it happen?) | How does wealth lead to voting for a certain political party in Canadian elections? |
+| Mechanistic | A question that asks about the underlying mechanism of the observed patterns, trends, or relationships (i.e., how does it happen?) | How does wealth lead to voting for a certain political party in Canadian elections? |
 
 Source: [What is the question?](https://science.sciencemag.org/content/347/6228/1314) by Jeffery T. Leek, Roger D. Peng & [The Art of Data Science](https://leanpub.com/artofdatascience) by Roger Peng & Elizabeth Matsui
 
-## Chapter learning objectives
+## Chapter Learning Objectives
 
 By the end of the chapter, students will be able to:
 
-- use a Jupyter notebook to execute provided R code
-- edit code and markdown cells in a Jupyter notebook
-- create new code and markdown cells in a Jupyter notebook
 - load the `tidyverse` library into R
 - create new variables and objects in R using the assignment symbol
 - use the help and documentation tools in R
@@ -83,23 +81,6 @@ By the end of the chapter, students will be able to:
     - `mutate`
     - `ggplot`
     - `aes`
-
-## Jupyter notebooks
-
-Jupyter notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they are able to combine these two in a single document---code is not separate from the output or written report---notebooks are one of the leading tools to create *reproducible data analyses*. A reproducible data analysis is one where you can reliably and easily recreate the same results when analyzing the same data. Although this sounds like something that should always be true of any data analysis, in reality this is not often the case; one needs to make a conscious effort to perform data analysis in a reproducible manner.
-
-The name Jupyter came from combining the names of the three programming language that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks. 
-
-A notebook looks like this:
-
-```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Jupyter Notebook", fig.retina = 2}
-knitr::include_graphics("img/jupyter.png")
-```
-
-We have included a short demo video here to help you get started and to introduce you to R and Jupyter. 
-However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it yourself! [Here is a worksheet](https://github.com/UBC-DSCI/dsci-100-assets/blob/master/2019-fall/materials/worksheet_01/worksheet_01.ipynb) that provides a step-by-step guide through the basics.
-
-<iframe width="840" height="473" src="https://www.youtube.com/embed/2yv4pEmFgnw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Loading a spreadsheet-like dataset
 
@@ -131,9 +112,8 @@ In its most basic use-case, `read_csv` expects that the data file:
 - uses a comma (`,`) to separate the columns, and
 - does not have row names.
 
-Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
-to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *library*. The `read_csv` function in particular
-is in the `tidyverse` library (more on this later), which we load using the `library` function.
+Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function in particular
+is in the `tidyverse` package (more on this later), which we load using the `library` function.
 
 Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we 
 use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file, because our file satifies everthing else 
