improved overview of regression 1

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -1,11 +1,21 @@
 # Regression I: K-nearest neighbours {#regression1}
 
 ## Overview 
-This chapter will provide an introduction to regression through K-nearest
-neighbours (K-NN) in a predictive context, focusing primarily on the case where
-there is a single predictor and single response variable of interest. The
-chapter concludes with an example of K-nearest neighbours regression with
-multiple predictors.
+
+This chapter continues our foray into answering predictive questions.
+But unlike the past two chapters, which focused on predicting categorical
+variables, this chapter will focus on predicting numerical
+variables. This process---known as *regression*---has many similarities
+to classification: for example, just as in the case of classification,
+we will split our data into training, validation, and test sets, we will 
+use `tidymodels` workflows, we will use a K-nearest neighbours 
+approach to make predictions, and we will use cross-validation to choose K.
+Because of how similar these procedures are, make sure to read Chapters
+6 and 7 before reading this one---we will move a little bit faster here with the
+concepts that have already been covered.
+This chapter will primarily focus on the case where there is a single predictor and single
+response variable of interest, but the end of the chapter shows how to perform
+*multivariate regression*, i.e., regression with more than one predictor variable.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
@@ -20,6 +30,39 @@ By the end of the chapter, students will be able to:
 * Describe advantages and disadvantages of the K-nearest neighbour regression approach.
 
 ## Regression 
+
+In many situations, we want to make predictions based on the current situation
+as well as past experiences. For instance, a doctor may want to diagnose a
+patient as either diseased or healthy based on their symptoms and the doctor’s
+past experience with patients; an email provider might want to tag a given
+email as “spam” or “not spam” depending on past email text data; or an online
+store may want to predict whether an order is fraudulent or not.
+
+These tasks are all examples of classification, i.e., predicting a categorical
+class (sometimes called a label) for an observation given its other
+quantitative variables (sometimes called features). Generally, a classifier
+assigns an observation (e.g. a new patient) to a class (e.g. diseased or
+healthy) on the basis of how similar it is to other observations for which we
+know the class (e.g. previous patients with known diseases and symptoms). These
+observations with known classes that we use as a basis for prediction are
+called a training set. We call them a “training set” because we use these
+observations to train, or teach, our classifier so that we can use it to make
+predictions on new data that we have not seen previously.
+
+There are many possible classification algorithms that we could use to predict
+a categorical class/label for an observation. In addition, there are many
+variations on the basic classification problem, e.g., binary classification
+where only two classes are involved (e.g. disease or healthy patient), or
+multiclass classification, which involves assigning an object to one of several
+classes (e.g., private, public, or not for-profit organization). Here we will
+focus on the simple, widely used K-nearest neighbours algorithm for the binary
+classification problem. Other examples you may encounter in future courses
+include decision trees, support vector machines (SVMs), logistic regression,
+and neural networks.
+
+
+%%%%%%%
+
 Regression, like classification, is a predictive problem setting where we want
 to use past information to predict future observations.  But in the case of
 regression, the goal is to predict numerical values instead of class labels.
