improved overview of ch8

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,12 +1,15 @@
 # Regression II: linear regression {#regression2}
 
 ## Overview 
-This chapter provides an introduction to linear regression models
- in a predictive context, focusing primarily on the case where
-there is a single predictor and single response variable of interest,
-as well as comparison to K-nearest neighbours methods. The
-chapter concludes with a discussion of linear regression with
-multiple predictors.
+Up until this point, we have solved all of our predictive problems---both classification
+and regression---using K-nearest neighbours-based approaches. But while K-NN methods are 
+simple and flexible, in the context of regression there is another method (far more popular in
+most scientific disciplines) known as *linear regression*. This chapter provides an introduction
+to the concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
+and characterizes its strengths and weaknesses in comparison to K-NN regression. The focus is, as usual,
+on the case where there is a single predictor and single response variable of interest, but the chapter
+concludes with an example of how to use *multivariate linear regression* when there is more than one
+predictor.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
